<resources>
    <string name="app_name">Quản Lý Chi Tiêu</string>
    <string name="updating">Đang cập nhật nội dung</string>
    <string name="tab1">Thu chi</string>
    <string name="tab2">Tài khoản</string>
    <string name="tab3">Hạn mức chi</string>
    <string name="tab4">Báo cáo</string>
    <string name="tab5">Tiện ích</string>
    <string name="amount">Số tiền</string>
    <string name="tab_note">note_tab</string>
    <string name="tab_account">account_tab</string>
    <string name="tab_limit">limit_tab</string>
    <string name="tab_report">report_tab</string>
    <string name="tab_utility">utility_tab</string>
    <string name="currency">đ</string>
    <string name="spending">Mục chi</string>
    <string name="detail">Diễn giải</string>
    <string name="from">Từ tài khoản</string>
    <string name="date">Ngày</string>
    <string name="receiver">Chi cho ai</string>
    <string name="event">Sự kiện</string>
    <string name="account">Tài khoản</string>
    <string name="spending_item">Hạng mục chi</string>
    <string name="save">Lưu</string>
    <string name="cancel">Hủy</string>
    <string name="name">Tên</string>
    <string name="item_name">Tên hạng mục</string>
    <string name="parent_item">Hạng mục cha</string>
    <string name="description">Diễn giải</string>
    <string name="list_spend_tab_one">Chi tiêu</string>
    <string name="list_spend_tab_two">Vay nợ</string>
    <string name="search">Tìm kiếm</string>
    <string name="done">Xong</string>
    <string name="note">Ghi chép</string>
    <string name="limit">Hạn mức</string>
    <string name="report">Báo cáo</string>
    <string name="utilities">Tiện ích</string>
    <string name="tab_date">Ngày</string>
    <string name="tab_time">Giờ</string>
    <string name="today">Hôm nay</string>
    <string name="spending_who">Chi cho ai</string>
    <string name="select_or_input_receiver">Chọn hoặc nhập người được chi</string>
    <string name="trip_or_event">Chuyến đi/Sự kiện</string>
    <string name="select_or_input_trip">Chọn hoặc nhập Chuyến đi sự kiện</string>
    <string name="spending_cant_be_blank">Mục chi không được để trống</string>
    <string name="write_success">Ghi thành công</string>
    <string name="write">Ghi</string>
    <string name="writed">Đã ghi</string>
    <string name="sum_title">Tổng còn:</string>
    <string name="to">Vào tài khoản</string>
    <string name="receive">Mục thu</string>
    <string name="transfer_fee">Phí chuyển khoản</string>
    <string name="splash_text">Quản lý chi tiêu</string>
    <string name="receive_cant_be_blank">Mục thu không được để trống</string>
    <string name="account_cant_same">Bạn không thể chuyển khoản trong cùng 1 tài khoản</string>
    <string name="amount_must_greater_than_0">Số tiền phải lớn hơn 0</string>
    <string name="spending_item_parent">Hạng mục cha</string>
    <string name="spend_item_cant_be_blank">Mục chi không được để trống</string>
    <string name="spend_item_already_exists">Mục chi đã tồn tại</string>
    <string name="insert_success">Thêm thành công</string>
    <string name="receive_item_cant_be_blank">Tên mục thu không được để trống</string>
    <string name="receive_item_already_exists">Mục thu đã tồn tại</string>
    <string name="double_press_to_exit_app">Nhấn thêm lần nữa để thoát</string>
    <string name="account_type">Loại tài khoản</string>
    <string name="first_amount">Số tiền ban đầu</string>
    <string name="account_name">Tên tài khoản</string>
    <string name="product_info">Thông tin sản phẩm</string>
    <string name="help">Trợ giúp</string>
    <string name="facebook_link">Liên kết Facebook</string>
    <string name="version">Phiên bản 1.0</string>
    <string name="close">ĐÓNG</string>
    <string name="account_name_cant_be_blank">Tên tài khoản không được để trống</string>
    <string name="account_name_already_exists">Tài khoản đã tồn tài</string>
    <string name="current_money">Số tiền hiện có</string>
    <string name="update_success">Sửa thành công</string>
    <string name="add_limit">Thêm hạn mức</string>
    <string name="limit_name">Tên hạn mức</string>
    <string name="write_limit">Ghi hạn mức</string>
    <string name="repeat">Lặp lại</string>
    <string name="start_date">Ngày bắt đầu</string>
    <string name="put_to_next_period">Dồn sang kỳ sau</string>
    <string name="surplus_or_deficit_amount_will_not_be_transferred_to_next_period">(Số tiền dư hoặc bội chi sẽ KHÔNG được chuyển sang kỳ sau)</string>
    <string name="function_updating">Chức năng đang cập nhật</string>
    <string name="pay">Chi tiền</string>
    <string name="receive_money">Thu tiền</string>
    <string name="total">Thống kê chi tiêu</string>
    <string name="this_month">Tháng này</string>
    <string name="this_year">Năm nay</string>
    <string name="sum">Tổng</string>
    <string name="received">Đã thu</string>
    <string name="transfer_to">Chuyển đến</string>
    <string name="delete">Xóa</string>
    <string name="receive_item">Hạng mục thu</string>

</resources>
