<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fr_trip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_list_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:layout_gravity="center"
        android:background="@color/header_blue"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_cancel"
            style="@style/text_header"
            android:layout_gravity="center_vertical|left"
            android:paddingLeft="@dimen/margin_10dp"
            android:paddingRight="@dimen/margin_5dp"
            android:gravity="center"
            android:text="@string/cancel" />

        <TextView
            style="@style/text_header"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/trip_or_event" />

        <TextView
            android:id="@+id/txt_done"
            style="@style/text_header"
            android:layout_gravity="center_vertical|right"
            android:paddingLeft="@dimen/margin_5dp"
            android:paddingRight="@dimen/margin_10dp"
            android:gravity="center"
            android:text="@string/done" />
    </LinearLayout>

    <EditText
        android:id="@+id/edt_trip"
        style="@style/edt_single_line"
        android:hint="@string/select_or_input_trip"
        >
        <requestFocus />
    </EditText>

</LinearLayout>