<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical">

    <!--header-->
    <LinearLayout
        android:id="@+id/ll_list_account"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/header_blue"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_cancel"
            style="@style/text_header"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/margin_10dp"
            android:paddingRight="@dimen/margin_5dp"
            android:gravity="center"
            android:text="@string/cancel" />

        <TextView
            style="@style/text_header"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/receive_item" />

        <Button
            android:id="@+id/btn_save"
            android:textColor="@android:color/white"
            style="@style/btn_header"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_marginRight="@dimen/margin_10dp"
            android:background="@drawable/bg_btn_border"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/save" />
    </LinearLayout>

    <!--amount-->

    <!--linear cotainer 1-->
    <LinearLayout
        style="@style/linear_custom"
        android:padding="@dimen/margin_10dp"
        android:orientation="horizontal">

            <TextView
                style="@style/text_note_normal"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/name" />

            <EditText
                android:id="@+id/edt_receive_item_name"
                style="@style/edt_note"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginRight="@dimen/margin_10dp"
                android:layout_weight="4"
                android:singleLine="true"
                android:hint="@string/item_name" />
    </LinearLayout>

    <!--linear container 2-->
    <LinearLayout
        style="@style/linear_custom"
        android:padding="@dimen/margin_10dp"
        android:orientation="horizontal">
        <!--description-->
        <TextView
            style="@style/text_note_normal"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1.5"
            android:duplicateParentState="true"
            android:text="@string/description" />

        <EditText
            android:id="@+id/edt_description"
            style="@style/edt_note"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginRight="@dimen/margin_10dp"
            android:layout_weight="4" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        android:background="@drawable/bg_btn_save"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_save" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5dp"
            android:layout_marginLeft="@dimen/margin_5dp"
            android:layout_marginTop="@dimen/margin_5dp"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>