<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/tab_layout_height"
        android:background="@color/bg_gray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_gray"
            android:orientation="vertical">

            <!--header-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/header_blue"
                android:orientation="horizontal"
                >
                <TextView
                    style="@style/text_header"
                    android:layout_weight="1"
                    android:text="@string/add_limit"
                    android:gravity="center"
                    android:layout_gravity="center_vertical"
                    />
                <Button
                    android:id="@+id/btn_save"
                    android:textColor="@android:color/white"
                    style="@style/btn_header"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="@dimen/margin_10dp"
                    android:background="@drawable/bg_btn_border"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/save" />
            </LinearLayout>

            <LinearLayout
                style="@style/linear_custom"
                android:layout_marginTop="@dimen/margin_10dp"
                android:padding="@dimen/margin_10dp"
                android:orientation="horizontal">
                <!--description-->
                <TextView
                    style="@style/text_note_normal"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="2.4"
                    android:duplicateParentState="true"
                    android:text="@string/limit_name" />

                <EditText
                    android:id="@+id/edt_limit_name"
                    style="@style/edt_note"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="@dimen/margin_10dp"
                    android:gravity="center_vertical|end"
                    android:layout_weight="4" />
            </LinearLayout>
            <!--amount-->
            <LinearLayout
                style="@style/linear_custom"
                android:focusableInTouchMode="true"
                android:padding="@dimen/ll_customer_padding">

                <EditText
                    android:id="@+id/edt_amount"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/margin_5dp"
                    android:layout_weight="8"
                    android:background="@android:color/white"
                    android:gravity="end|center_vertical"
                    android:hint="@string/amount"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:textSize="30sp"
                    android:textStyle="bold"></EditText>

                <TextView
                    style="@style/text_border"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1.2"
                    android:background="@drawable/bg_txt_border"
                    android:text="@string/currency"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <LinearLayout
                style="@style/linear_custom"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/ll_repeat"
                    style="@style/linear_custom_chil">

                    <TextView
                        style="@style/text_note_normal"
                        android:layout_weight="2"
                        android:text="@string/repeat" />

                    <TextView
                        android:id="@+id/txt_repeat"
                        style="@style/text_note_detail"
                        android:layout_weight="3"
                        android:text="Ví" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_arrow_right" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:background="@android:color/darker_gray"></View>

                <!--description-->
                <LinearLayout
                    android:id="@+id/ll_start_date"
                    style="@style/linear_custom_chil">

                    <TextView
                        style="@style/text_note_normal"
                        android:layout_weight="1.8"
                        android:text="@string/start_date" />

                    <TextView
                        android:id="@+id/txt_start_date"
                        style="@style/text_note_detail"
                        android:layout_weight="3" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_arrow_right" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:background="@android:color/darker_gray"></View>
                <!--recevier-->
            </LinearLayout>

            <CheckBox
                android:id="@+id/ck_limit"
                android:text="@string/put_to_next_period"
                android:textSize="@dimen/size_normal"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/surplus_or_deficit_amount_will_not_be_transferred_to_next_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginLeft="@dimen/margin_large"/>

            <LinearLayout
                android:id="@+id/ll_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10dp"
                android:background="@drawable/bg_btn_save"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_save" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_5dp"
                    android:layout_marginLeft="@dimen/margin_5dp"
                    android:layout_marginTop="@dimen/margin_5dp"
                    android:text="@string/write_limit"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>